# hse_spb_2026_swe_practice_1

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI.yml  build-and-test.yml  sanitizers.yml  static-analysis.yml  valgrind.yml
app/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  Coverage.cmake  ProjectOptions.cmake  Sanitizers.cmake
docs/: architecture.md  architecture.puml
include/cli/: ast.hpp  command.hpp  command_line_interpreter.hpp  command_registry.hpp  environment.hpp  executor.hpp  external_command.hpp  foo.hpp  parser.hpp
include/cli/commands/: cat_command.hpp  echo_command.hpp  exit_command.hpp  grep_command.hpp  pwd_command.hpp  wc_command.hpp
src/: CMakeLists.txt  command_line_interpreter.cpp  command_registry.cpp  environment.cpp  executor.cpp  external_command.cpp  foo.cpp  parser.cpp
src/commands/: cat_command.cpp  echo_command.cpp  exit_command.cpp  grep_command.cpp  pwd_command.cpp  wc_command.cpp
tests/: CMakeLists.txt  test_command_line_interpreter.cpp  test_command_registry.cpp  test_commands.cpp  test_environment.cpp  test_executor.cpp  test_foo.cpp  test_parser.cpp
